@@ -2,6 +2,7 @@ package com.example.emazon.adapters.driven.jpa.mysql.adapter;
 
 
 import com.example.emazon.adapters.driven.jpa.mysql.entity.CategoryEntity;
+import com.example.emazon.adapters.driven.jpa.mysql.exception.CategoryAlreadyExistsException;
 import com.example.emazon.adapters.driven.jpa.mysql.exception.ElementNotFoundException;
 import com.example.emazon.adapters.driven.jpa.mysql.exception.NoDataFoundException;
 import com.example.emazon.adapters.driven.jpa.mysql.mapper.ICategoryEntityMapper;
@@ -18,11 +19,11 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Sort;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CategoryAdapter implements ICategoryPersistentPort {
     private final ICategoryRepository categoryRepository;
     private final ICategoryEntityMapper categoryEntityMapper;
+    private static final String ENTITY = "Category";
 
     public CategoryAdapter(ICategoryRepository categoryRepository, ICategoryEntityMapper categoryEntityMapper) {
         this.categoryRepository = categoryRepository;
@@ -43,7 +44,7 @@ public class CategoryAdapter implements ICategoryPersistentPort {
         // Mapea las entidades a objetos de dominio
         List<Category> categories = categoryEntitiesPage.getContent().stream()
                 .map(categoryEntityMapper::toModel)
-                .collect(Collectors.toList());
+                .toList();
 
         // Retorna la respuesta paginada
         return new PaginatedResponse<>(
@@ -56,6 +57,9 @@ public class CategoryAdapter implements ICategoryPersistentPort {
 
     @Override
     public Category save(Category category) {
+        if(categoryRepository.findByNameContaining(category.getName().toLowerCase()).isPresent()){
+            throw new CategoryAlreadyExistsException(Constants.CATEGORY_ALREADY_EXISTS_EXCEPTION_MESSAGE);
+        }
         return categoryEntityMapper.toModel(categoryRepository.save(categoryEntityMapper.toEntity(category)));
     }
 
@@ -65,7 +69,7 @@ public class CategoryAdapter implements ICategoryPersistentPort {
     @Override
     public Category getCategoryByName(String name) {
         CategoryEntity categoryEntity = categoryRepository.findByNameContaining(name.toLowerCase())
-                .orElseThrow(() -> new ElementNotFoundException("Category not found with name: " + name));
+                .orElseThrow(() ->  new ElementNotFoundException(ENTITY, "name", name));
         return categoryEntityMapper.toModel(categoryEntity);
     }
 
@@ -81,14 +85,14 @@ public class CategoryAdapter implements ICategoryPersistentPort {
     @Override
     public Category getCategoryById(Integer id) {
         CategoryEntity categoryEntity = categoryRepository.findById(id)
-                .orElseThrow(() -> new ElementNotFoundException(Constants.CATEGORY_NOT_FOUND_BY_ID));
+                .orElseThrow(() -> new ElementNotFoundException(ENTITY, "id", id.toString()));
         return categoryEntityMapper.toModel(categoryEntity);
     }
 
     @Override
     public Category updateCategory(Category category) {
         if(categoryRepository.findById(category.getId()).isEmpty()){
-            throw new ElementNotFoundException(Constants.CATEGORY_NOT_FOUND_BY_ID);
+            throw new ElementNotFoundException(ENTITY, "id", category.getId().toString());
         }
         return categoryEntityMapper.toModel(categoryRepository.save(categoryEntityMapper.toEntity(category)));
     }
@@ -96,7 +100,7 @@ public class CategoryAdapter implements ICategoryPersistentPort {
     @Override
     public void deleteById(Integer id) {
         if(categoryRepository.findById(id).isEmpty()){
-            throw new ElementNotFoundException(Constants.CATEGORY_NOT_FOUND_BY_ID);
+            throw new ElementNotFoundException(ENTITY, "id", id.toString());
         }
         categoryRepository.deleteById(id);
     }
